@@ -6,6 +6,7 @@
 #include <string.h>
 #include <stdio.h>
 #include <unistd.h>
+#include <errno.h>
 
 #include "config-srcpd.h"
 #include "srcp-time.h"
@@ -14,29 +15,61 @@
 #include "syslogmessage.h"
 
 
-/*local variable for time thread*/
+/*local variables for time thread*/
 static pthread_t time_tid;
-
-/*FIXME: this variable can be accessed by several threads at the
- * same time and should be protected by a lock*/
+static pthread_mutex_t time_value_mutex = PTHREAD_MUTEX_INITIALIZER;
 static vtime_t vtime;
+static pthread_mutex_t time_distort_mutex = PTHREAD_MUTEX_INITIALIZER;
+static pthread_cond_t time_distort_cond = PTHREAD_COND_INITIALIZER;
+static time_distort_t distort;
+
 
 
 int startup_TIME(void)
 {
-    gettimeofday(&vtime.inittime, NULL);
+    gettimeofday(&distort.inittime, NULL);
     return 0;
+}
+
+static void set_time(vtime_t *vt)
+{
+    int result;
+
+    result = pthread_mutex_lock(&time_value_mutex);
+    if (result != 0) {
+        syslog_bus(0, DBG_ERROR,
+                "pthread_mutex_lock() failed: %s (errno = %d).",
+                strerror(result), result);
+    }
+
+    vtime = *vt;
+    
+    result = pthread_mutex_unlock(&time_value_mutex);
+    if (result != 0) {
+        syslog_bus(0, DBG_ERROR,
+                "pthread_mutex_unlock() failed: %s (errno = %d).",
+                strerror(result), result);
+    }
 }
 
 int setTIME(int d, int h, int m, int s)
 {
+    vtime_t vt;
+    char msg[100];
+
     if (d < 0 || h < 0 || h > 23 || m < 0 || m > 59 || s < 0 || s > 59)
         return SRCP_WRONGVALUE;
 
-    vtime.day = d;
-    vtime.hour = h;
-    vtime.min = m;
-    vtime.sec = s;
+    vt.day = d;
+    vt.hour = h;
+    vt.min = m;
+    vt.sec = s;
+
+    set_time(&vt);
+
+    infoTIME(msg);
+    enqueueInfoMessage(msg);
+
     return SRCP_OK;
 }
 
@@ -46,9 +79,33 @@ int initTIME(int fx, int fy)
         return SRCP_WRONGVALUE;
 
     char msg[100];
-    vtime.ratio_x = fx;
-    vtime.ratio_y = fy;
-    gettimeofday(&vtime.inittime, NULL);
+    int result;
+
+    result = pthread_mutex_lock(&time_distort_mutex);
+    if (result != 0) {
+        syslog_bus(0, DBG_ERROR,
+                "pthread_mutex_lock() failed: %s (errno = %d).",
+                strerror(result), result);
+    }
+    
+    distort.ratio_x = fx;
+    distort.ratio_y = fy;
+    gettimeofday(&distort.inittime, NULL);
+
+    result = pthread_cond_signal(&time_distort_cond);
+    if (result != 0) {
+        syslog_bus(0, DBG_ERROR,
+                "pthread_cond_signal() failed: %s (errno = %d).",
+                strerror(result), result);
+    }
+    
+    result = pthread_mutex_unlock(&time_distort_mutex);
+    if (result != 0) {
+        syslog_bus(0, DBG_ERROR,
+                "pthread_mutex_unlock() failed: %s (errno = %d).",
+                strerror(result), result);
+    }
+    
     describeTIME(msg);
     enqueueInfoMessage(msg);
     return SRCP_OK;
@@ -56,11 +113,26 @@ int initTIME(int fx, int fy)
 
 int termTIME()
 {
+    int result;
     char msg[100];
-
-    vtime.ratio_x = vtime.ratio_y = 0;
-
     struct timeval current_time;
+
+    result = pthread_mutex_lock(&time_distort_mutex);
+    if (result != 0) {
+        syslog_bus(0, DBG_ERROR,
+                "pthread_mutex_lock() failed: %s (errno = %d).",
+                strerror(result), result);
+    }
+    
+    distort.ratio_x = distort.ratio_y = 0;
+
+    result = pthread_mutex_unlock(&time_distort_mutex);
+    if (result != 0) {
+        syslog_bus(0, DBG_ERROR,
+                "pthread_mutex_unlock() failed: %s (errno = %d).",
+                strerror(result), result);
+    }
+    
     gettimeofday(&current_time, NULL);
     sprintf(msg, "%lu.%.3lu 102 INFO 0 TIME\n",
             current_time.tv_sec, current_time.tv_usec / 1000);
@@ -71,56 +143,161 @@ int termTIME()
 
 int getTIME(vtime_t *vt)
 {
+    int result;
+
+    result = pthread_mutex_lock(&time_value_mutex);
+    if (result != 0) {
+        syslog_bus(0, DBG_ERROR,
+                "pthread_mutex_lock() failed: %s (errno = %d).",
+                strerror(result), result);
+    }
+
     *vt = vtime;
+    
+    result = pthread_mutex_unlock(&time_value_mutex);
+    if (result != 0) {
+        syslog_bus(0, DBG_ERROR,
+                "pthread_mutex_unlock() failed: %s (errno = %d).",
+                strerror(result), result);
+    }
+    
     return SRCP_OK;
+}
+
+static int get_distortion(time_distort_t *td)
+{
+    int result;
+
+    result = pthread_mutex_lock(&time_distort_mutex);
+    if (result != 0) {
+        syslog_bus(0, DBG_ERROR,
+                "pthread_mutex_lock() failed: %s (errno = %d).",
+                strerror(result), result);
+    }
+
+    *td = distort;
+    
+    result = pthread_mutex_unlock(&time_distort_mutex);
+    if (result != 0) {
+        syslog_bus(0, DBG_ERROR,
+                "pthread_mutex_unlock() failed: %s (errno = %d).",
+                strerror(result), result);
+    }
+    
+    return SRCP_OK;
+}
+
+bool time_is_available()
+{
+    int result;
+    bool available;
+
+    result = pthread_mutex_lock(&time_distort_mutex);
+    if (result != 0) {
+        syslog_bus(0, DBG_ERROR,
+                "pthread_mutex_lock() failed: %s (errno = %d).",
+                strerror(result), result);
+    }
+    
+    available = ((distort.ratio_x > 0) && (distort.ratio_y > 0));
+    
+    result = pthread_mutex_unlock(&time_distort_mutex);
+    if (result != 0) {
+        syslog_bus(0, DBG_ERROR,
+                "pthread_mutex_unlock() failed: %s (errno = %d).",
+                strerror(result), result);
+    }
+
+    return available;
 }
 
 int infoTIME(char *msg)
 {
     msg[0] = '\0';
+    int result;
+    vtime_t vt;
+    struct timeval akt_time;
 
-    if (vtime.ratio_x == 0 && vtime.ratio_y == 0)
+    if (!time_is_available())
         return SRCP_NODATA;
 
-    struct timeval akt_time;
+    result = getTIME(&vt);
+    if (result != SRCP_OK)
+        return result;
+
     gettimeofday(&akt_time, NULL);
     
     sprintf(msg, "%lu.%.3lu 100 INFO 0 TIME %d %d %d %d\n",
-            akt_time.tv_sec, akt_time.tv_usec / 1000, vtime.day,
-            vtime.hour, vtime.min, vtime.sec);
+            akt_time.tv_sec, akt_time.tv_usec / 1000,
+            vt.day, vt.hour, vt.min, vt.sec);
     
     return SRCP_INFO;
 }
 
 int describeTIME(char *reply)
 {
+    time_distort_t td;
+    int result;
+
+    result = get_distortion(&td);
+    if (result != SRCP_OK)
+        return result;
+
     sprintf(reply, "%lu.%.3lu 101 INFO 0 TIME %d %d\n",
-            vtime.inittime.tv_sec, vtime.inittime.tv_usec / 1000,
-            vtime.ratio_x, vtime.ratio_y);
+            td.inittime.tv_sec, td.inittime.tv_usec / 1000,
+            td.ratio_x, td.ratio_y);
+
     return SRCP_INFO;
 }
 
 /***********************************************************************
- * Zeitgeber, aktualisiert die Datenstrukturen im Modellsekundenraster *
+ * time thread, updates time value in model time scale *
  ***********************************************************************/
 void *thr_clock(void *v)
 {
+    int result;
     vtime_t vt;
+    unsigned long sleeptime;
     bool sendinfo = false;
-    vtime.ratio_x = 0;
-    vtime.ratio_y = 0;
+    distort.ratio_x = distort.ratio_y = 0;
 
-    while (1) {
-        unsigned long sleeptime;
-        if (vtime.ratio_x == 0 || vtime.ratio_y == 0) {
-            sleep(1);
-            continue;
+    while (true) {
+
+        result = pthread_mutex_lock(&time_distort_mutex);
+        if (result != 0) {
+            syslog_bus(0, DBG_ERROR,
+                    "pthread_mutex_lock() failed: %s (errno = %d).",
+                    strerror(result), result);
         }
+
+        /*wait here suspended if no timer is needed*/
+        while (distort.ratio_x == 0 || distort.ratio_y == 0) {
+            result = pthread_cond_wait(&time_distort_cond, &time_distort_mutex);
+            if (result != 0) {
+                syslog_bus(0, DBG_ERROR,
+                        "pthread_cond_wait() failed: %s (errno = %d).",
+                        strerror(result), result);
+            }
+        }
+
         /* delta Modellzeit = delta real time * ratio_x/ratio_y */
-        sleeptime = (1000000 * vtime.ratio_y) / vtime.ratio_x;
-        usleep(sleeptime);
+        sleeptime = (1000000 * distort.ratio_y) / distort.ratio_x;
+
+        result = pthread_mutex_unlock(&time_distort_mutex);
+        if (result != 0) {
+            syslog_bus(0, DBG_ERROR,
+                    "pthread_mutex_unlock() failed: %s (errno = %d).",
+                    strerror(result), result);
+        }
+
+        if (usleep(sleeptime) == -1) {
+            syslog_bus(0, DBG_ERROR,
+                    "usleep() failed: %s (errno = %d)\n",
+                    strerror(errno), errno);
+        }
+
         /* use temporary copy for calculations, so vtime is always valid */
-        vt = vtime;
+        getTIME(&vt);
         vt.sec++;
         if (vt.sec >= 60) {
             vt.sec = 0;
@@ -135,14 +312,14 @@ void *thr_clock(void *v)
             vt.day++;
             vt.hour = 0;
         }
-        vtime = vt;
+        set_time(&vt);
+
         if (sendinfo) {
             sendinfo = false;
             char msg[100];
             infoTIME(msg);
             enqueueInfoMessage(msg);
         }
-        /* syslog(LOG_INFO, "time: %d %d %d %d %d %d", vtime.day, vtime.hour, vtime.min, vtime.sec,  vtime.ratio_x, vtime.ratio_y); */
     }
 }
 
